// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiTourStep can be closed 1`] = `
<div
  aria-label="aria-label"
  class="euiPopover euiPopover--anchorLeftUp euiPopover--withTitle"
  data-test-subj="test subject string"
  offset="10"
>
  <div
    class="euiPopover__anchor"
  >
    <span>
      Test
    </span>
  </div>
</div>
`;

exports[`EuiTourStep can override the footer action 1`] = `
<div
  aria-label="aria-label"
  class="euiPopover euiPopover--anchorLeftUp euiPopover--withTitle"
  data-test-subj="test subject string"
  offset="10"
>
  <div
    class="euiPopover__anchor"
  >
    <span>
      Test
    </span>
  </div>
</div>
`;

exports[`EuiTourStep can set a minWidth 1`] = `
<div
  aria-label="aria-label"
  class="euiPopover euiPopover--anchorLeftUp euiPopover--withTitle"
  data-test-subj="test subject string"
  offset="10"
>
  <div
    class="euiPopover__anchor"
  >
    <span>
      Test
    </span>
  </div>
</div>
`;

exports[`EuiTourStep can turn off the beacon 1`] = `
<div
  aria-label="aria-label"
  class="euiPopover euiPopover--anchorLeftUp euiPopover--withTitle"
  data-test-subj="test subject string"
  offset="0"
>
  <div
    class="euiPopover__anchor"
  >
    <span>
      Test
    </span>
  </div>
</div>
`;

exports[`EuiTourStep is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiPopover euiPopover--anchorLeftUp euiPopover--withTitle"
  data-test-subj="test subject string"
  offset="10"
>
  <div
    class="euiPopover__anchor"
  >
    <span>
      Test
    </span>
  </div>
</div>
`;
